--- a/index.html
+++ b/index.html
@@ -1,248 +1,239 @@
 <!DOCTYPE html>
 <html lang="id">
-<head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Keranjang Luxury Edition - Jupiter Mart</title>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Keranjang Luxury Edition - Jupiter Mart</title>
 
-  <link rel="preconnect" href="https://fonts.googleapis.com" />
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap" rel="stylesheet" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap" rel="stylesheet" />
 
-  <style>
-    :root {
-      --blue: #3B82F6;
-      --green: #10B981;
-      --soft-gray: #F3F4F6;
-      --dark: #111827;
-      --white: #ffffff;
-    }
+    <style>
+      :root {
+        --blue: #3b82f6;
+        --green: #10b981;
+        --soft-gray: #f3f4f6;
+        --dark: #111827;
+        --white: #ffffff;
+      }
 
-    body {
-      margin: 0;
-      padding: 0;
-      font-family: "Poppins", sans-serif;
-      background: linear-gradient(135deg, #EFF6FF, #F0FDF4);
-      min-height: 100vh;
-      color: var(--dark);
-    }
+      body {
+        margin: 0;
+        padding: 0;
+        font-family: "Poppins", sans-serif;
+        background: linear-gradient(135deg, #eff6ff, #f0fdf4);
+        min-height: 100vh;
+        color: var(--dark);
+      }
 
-    /* CONTAINER */
-    .container {
-      max-width: 1300px;
-      margin: auto;
-      padding: 40px 20px;
-    }
+      /* CONTAINER */
+      .container {
+        max-width: 1300px;
+        margin: auto;
+        padding: 40px 20px;
+      }
 
-    /* TITLE */
-    .page-title {
-      font-size: 42px;
-      font-weight: 700;
-      background: linear-gradient(135deg, var(--blue), var(--green));
-      -webkit-background-clip: text;
-      -webkit-text-fill-color: transparent;
-      margin-bottom: 40px;
-      text-shadow: 0px 4px 30px rgba(16,185,129,0.3);
-    }
+      /* TITLE */
+      .page-title {
+        font-size: 42px;
+        font-weight: 700;
+        background: linear-gradient(135deg, var(--blue), var(--green));
+        -webkit-background-clip: text;
+        -webkit-text-fill-color: transparent;
+        margin-bottom: 40px;
+        text-shadow: 0px 4px 30px rgba(16, 185, 129, 0.3);
+      }
 
-    /* GRID */
-    .cart-grid {
-      display: grid;
-      gap: 35px;
-      grid-template-columns: 2.3fr 1fr;
-    }
+      /* GRID */
+      .cart-grid {
+        display: grid;
+        gap: 35px;
+        grid-template-columns: 2.3fr 1fr;
+      }
 
-    /* ULTRA PREMIUM CARD */
-    .ultra-card {
-      background: rgba(255,255,255,0.8);
-      backdrop-filter: blur(20px);
-      border-radius: 28px;
-      padding: 30px;
-      box-shadow: 0 8px 40px rgba(0,0,0,0.12);
-      border: 1px solid rgba(255,255,255,0.5);
-      position: relative;
-      overflow: hidden;
-    }
+      /* ULTRA PREMIUM CARD */
+      .ultra-card {
+        background: rgba(255, 255, 255, 0.8);
+        backdrop-filter: blur(20px);
+        border-radius: 28px;
+        padding: 30px;
+        box-shadow: 0 8px 40px rgba(0, 0, 0, 0.12);
+        border: 1px solid rgba(255, 255, 255, 0.5);
+        position: relative;
+        overflow: hidden;
+      }
 
-    .ultra-card::before {
-      content: "";
-      position: absolute;
-      top: 0;
-      left: 0;
-      width: 100%;
-      height: 100%;
-      background: radial-gradient(circle at top left, rgba(59,130,246,0.18), transparent);
-      z-index: 1;
-    }
+      .ultra-card::before {
+        content: "";
+        position: absolute;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        background: radial-gradient(circle at top left, rgba(59, 130, 246, 0.18), transparent);
+        z-index: 1;
+      }
 
-    .ultra-card > * {
-      position: relative;
-      z-index: 2;
-    }
+      .ultra-card > * {
+        position: relative;
+        z-index: 2;
+      }
 
-    /* ITEM LIST */
-    .cart-item {
-      display: grid;
-      grid-template-columns: 140px 1fr 110px;
-      gap: 20px;
-      padding: 25px 0;
-      border-bottom: 1px solid #E5E7EB;
-    }
+      /* ITEM LIST */
+      .cart-item {
+        display: grid;
+        grid-template-columns: 140px 1fr 110px;
+        gap: 20px;
+        padding: 25px 0;
+        border-bottom: 1px solid #e5e7eb;
+      }
 
-    .cart-item:last-child {
-      border-bottom: none;
-    }
+      .cart-item:last-child {
+        border-bottom: none;
+      }
 
-    .cart-item img {
-      width: 130px;
-      height: 130px;
-      border-radius: 20px;
-      object-fit: cover;
-      box-shadow: 0 6px 20px rgba(0,0,0,0.1);
-    }
+      .cart-item img {
+        width: 130px;
+        height: 130px;
+        border-radius: 20px;
+        object-fit: cover;
+        box-shadow: 0 6px 20px rgba(0, 0, 0, 0.1);
+      }
 
-    .item-info h3 {
-      font-size: 20px;
-      font-weight: 600;
-      margin: 0;
-    }
+      .item-info h3 {
+        font-size: 20px;
+        font-weight: 600;
+        margin: 0;
+      }
 
-    .item-info p {
-      font-size: 14px;
-      color: #6B7280;
-      margin: 6px 0;
-    }
+      .item-info p {
+        font-size: 14px;
+        color: #6b7280;
+        margin: 6px 0;
+      }
 
-    .qty-box {
-      display: flex;
-      align-items: center;
-      gap: 10px;
-    }
+      .qty-box {
+        display: flex;
+        align-items: center;
+        gap: 10px;
+      }
 
-    .qty-box button {
-      width: 36px;
-      height: 36px;
-      border: none;
-      background: linear-gradient(135deg, var(--blue), var(--green));
-      border-radius: 10px;
-      color: white;
-      font-size: 18px;
-      cursor: pointer;
-      box-shadow: 0 4px 14px rgba(59,130,246,0.4);
-    }
+      .qty-box button {
+        width: 36px;
+        height: 36px;
+        border: none;
+        background: linear-gradient(135deg, var(--blue), var(--green));
+        border-radius: 10px;
+        color: white;
+        font-size: 18px;
+        cursor: pointer;
+        box-shadow: 0 4px 14px rgba(59, 130, 246, 0.4);
+      }
 
-    .qty-box span {
-      font-size: 18px;
-      font-weight: 600;
-    }
+      .qty-box span {
+        font-size: 18px;
+        font-weight: 600;
+      }
 
-    /* SUMMARY */
-    .summary-title {
-      font-size: 28px;
-      font-weight: 700;
-      margin-bottom: 20px;
-      background: linear-gradient(135deg, var(--blue), var(--green));
-      -webkit-background-clip: text;
-      -webkit-text-fill-color: transparent;
-    }
+      /* SUMMARY */
+      .summary-title {
+        font-size: 28px;
+        font-weight: 700;
+        margin-bottom: 20px;
+        background: linear-gradient(135deg, var(--blue), var(--green));
+        -webkit-background-clip: text;
+        -webkit-text-fill-color: transparent;
+      }
 
-    .summary-row {
-      display: flex;
-      justify-content: space-between;
-      font-size: 17px;
-      margin: 12px 0;
-    }
+      .summary-row {
+        display: flex;
+        justify-content: space-between;
+        font-size: 17px;
+        margin: 12px 0;
+      }
 
-    .summary-total {
-      font-size: 22px;
-      font-weight: 700;
-      border-top: 1px solid #E5E7EB;
-      padding-top: 20px;
-      margin-top: 20px;
-    }
+      .summary-total {
+        font-size: 22px;
+        font-weight: 700;
+        border-top: 1px solid #e5e7eb;
+        padding-top: 20px;
+        margin-top: 20px;
+      }
 
-    /* BUTTON */
-    .checkout-btn {
-      width: 100%;
-      padding: 16px;
-      margin-top: 25px;
-      border: none;
-      font-size: 18px;
-      font-weight: 600;
-      color: white;
-      border-radius: 16px;
-      cursor: pointer;
-      background: linear-gradient(145deg, var(--blue), var(--green));
-      box-shadow: 0px 8px 24px rgba(16,185,129,0.35);
-      transition: 0.25s ease-in-out;
-    }
+      /* BUTTON */
+      .checkout-btn {
+        width: 100%;
+        padding: 16px;
+        margin-top: 25px;
+        border: none;
+        font-size: 18px;
+        font-weight: 600;
+        color: white;
+        border-radius: 16px;
+        cursor: pointer;
+        background: linear-gradient(145deg, var(--blue), var(--green));
+        box-shadow: 0px 8px 24px rgba(16, 185, 129, 0.35);
+        transition: 0.25s ease-in-out;
+      }
 
-    .checkout-btn:hover {
-      transform: scale(1.04);
-    }
+      .checkout-btn:hover {
+        transform: scale(1.04);
+      }
+    </style>
+  </head>
+  <body>
+    <div class="container">
+      <h1 class="page-title">Keranjang Belanja</h1>
 
-  </style>
-</head>
-<body>
+      <div class="cart-grid">
+        <!-- LEFT SIDE - CART -->
+        <div class="ultra-card">
+          <div class="cart-item">
+            <img src="assets/images/sample.jpg" />
+            <div class="item-info">
+              <h3>Beras Premium 5kg</h3>
+              <p>Harga: Rp 85.000</p>
+            </div>
+            <div class="qty-box">
+              <button>-</button>
+              <span>1</span>
+              <button>+</button>
+            </div>
+          </div>
 
-<div class="container">
-  <h1 class="page-title">Keranjang Belanja</h1>
-
-  <div class="cart-grid">
-
-    <!-- LEFT SIDE - CART -->
-    <div class="ultra-card">
-
-      <div class="cart-item">
-        <img src="assets/images/sample.jpg" />
-        <div class="item-info">
-          <h3>Beras Premium 5kg</h3>
-          <p>Harga: Rp 85.000</p>
+          <div class="cart-item">
+            <img src="assets/images/sample2.jpg" />
+            <div class="item-info">
+              <h3>Serum Brightening</h3>
+              <p>Harga: Rp 75.000</p>
+            </div>
+            <div class="qty-box">
+              <button>-</button>
+              <span>2</span>
+              <button>+</button>
+            </div>
+          </div>
         </div>
-        <div class="qty-box">
-          <button>-</button>
-          <span>1</span>
-          <button>+</button>
+
+        <!-- RIGHT SIDE - SUMMARY -->
+        <div class="ultra-card">
+          <h2 class="summary-title">Ringkasan Belanja</h2>
+
+          <div class="summary-row">
+            <span>Subtotal</span>
+            <span>Rp 235.000</span>
+          </div>
+          <div class="summary-row">
+            <span>Ongkir</span>
+            <span>Rp 15.000</span>
+          </div>
+
+          <div class="summary-total">Total: Rp 250.000</div>
+
+          <button class="checkout-btn">Lanjut ke Pembayaran</button>
         </div>
       </div>
-
-      <div class="cart-item">
-        <img src="assets/images/sample2.jpg" />
-        <div class="item-info">
-          <h3>Serum Brightening</h3>
-          <p>Harga: Rp 75.000</p>
-        </div>
-        <div class="qty-box">
-          <button>-</button>
-          <span>2</span>
-          <button>+</button>
-        </div>
-      </div>
-
     </div>
-
-    <!-- RIGHT SIDE - SUMMARY -->
-    <div class="ultra-card">
-      <h2 class="summary-title">Ringkasan Belanja</h2>
-
-      <div class="summary-row">
-        <span>Subtotal</span>
-        <span>Rp 235.000</span>
-      </div>
-      <div class="summary-row">
-        <span>Ongkir</span>
-        <span>Rp 15.000</span>
-      </div>
-
-      <div class="summary-total">
-        Total: Rp 250.000
-      </div>
-
-      <button class="checkout-btn">Lanjut ke Pembayaran</button>
-    </div>
-
-  </div>
-</div>
-
-</body>
+  </body>
 </html>
