--- a/index.html
+++ b/index.html
@@ -1,242 +1,319 @@
-<<<<<<< HEAD
-=======
 <!DOCTYPE html>
 <html lang="id">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Keranjang Luxury Edition - Jupiter Mart</title>
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Jupiter Mart - Marketplace</title>
+  <link rel="stylesheet" href="assets/css/style.css" />
+  <link rel="preconnect" href="https://fonts.googleapis.com" />
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap" rel="stylesheet" />
+</head>
+<body>
+  <!-- HEADER -->
+  <header class="site-header">
+    <div class="top-bar container">
+      <div class="logo">
+        Abdi<span>Mart</span>
+      </div>
 
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap" rel="stylesheet" />
+      <form class="search-bar">
+        <input type="text" placeholder="Cari produk, brand, atau kategori..." />
+        <button type="submit">Cari</button>
+      </form>
 
-    <style>
-      :root {
-        --blue: #3b82f6;
-        --green: #10b981;
-        --soft-gray: #f3f4f6;
-        --dark: #111827;
-        --white: #ffffff;
-      }
+      <div class="header-actions">
+        <button class="icon-btn">
+          <span class="icon">🛒</span>
+          <span class="label">Keranjang</span>
+        </button>
+        <button class="icon-btn">
+          <span class="icon">❤️</span>
+          <span class="label">Favorit</span>
+        </button>
+        <button class="icon-btn">
+          <span class="icon">👤</span>
+          <span class="label">Akun</span>
+        </button>
+      </div>
+    </div>
 
-      body {
-        margin: 0;
-        padding: 0;
-        font-family: "Poppins", sans-serif;
-        background: linear-gradient(135deg, #eff6ff, #f0fdf4);
-        min-height: 100vh;
-        color: var(--dark);
-      }
+    <nav class="header-nav container">
+      <ul>
+        <li><a href="#beranda" class="active">Beranda</a></li>
+        <li><a href="#flash-sale">Flash Sale</a></li>
+        <li><a href="#brand-favorit">Brand Favorit</a></li>
+        <li><a href="#voucher">Voucher & Promo</a></li>
+        <li><a href="#official-store">Official Store</a></li>
+        <li><a href="#bantuan">Bantuan</a></li>
+      </ul>
+    </nav>
+  </header>
 
-      /* CONTAINER */
-      .container {
-        max-width: 1300px;
-        margin: auto;
-        padding: 40px 20px;
-      }
-
-      /* TITLE */
-      .page-title {
-        font-size: 42px;
-        font-weight: 700;
-        background: linear-gradient(135deg, var(--blue), var(--green));
-        -webkit-background-clip: text;
-        -webkit-text-fill-color: transparent;
-        margin-bottom: 40px;
-        text-shadow: 0px 4px 30px rgba(16, 185, 129, 0.3);
-      }
-
-      /* GRID */
-      .cart-grid {
-        display: grid;
-        gap: 35px;
-        grid-template-columns: 2.3fr 1fr;
-      }
-
-      /* ULTRA PREMIUM CARD */
-      .ultra-card {
-        background: rgba(255, 255, 255, 0.8);
-        backdrop-filter: blur(20px);
-        border-radius: 28px;
-        padding: 30px;
-        box-shadow: 0 8px 40px rgba(0, 0, 0, 0.12);
-        border: 1px solid rgba(255, 255, 255, 0.5);
-        position: relative;
-        overflow: hidden;
-      }
-
-      .ultra-card::before {
-        content: "";
-        position: absolute;
-        top: 0;
-        left: 0;
-        width: 100%;
-        height: 100%;
-        background: radial-gradient(circle at top left, rgba(59, 130, 246, 0.18), transparent);
-        z-index: 1;
-      }
-
-      .ultra-card > * {
-        position: relative;
-        z-index: 2;
-      }
-
-      /* ITEM LIST */
-      .cart-item {
-        display: grid;
-        grid-template-columns: 140px 1fr 110px;
-        gap: 20px;
-        padding: 25px 0;
-        border-bottom: 1px solid #e5e7eb;
-      }
-
-      .cart-item:last-child {
-        border-bottom: none;
-      }
-
-      .cart-item img {
-        width: 130px;
-        height: 130px;
-        border-radius: 20px;
-        object-fit: cover;
-        box-shadow: 0 6px 20px rgba(0, 0, 0, 0.1);
-      }
-
-      .item-info h3 {
-        font-size: 20px;
-        font-weight: 600;
-        margin: 0;
-      }
-
-      .item-info p {
-        font-size: 14px;
-        color: #6b7280;
-        margin: 6px 0;
-      }
-
-      .qty-box {
-        display: flex;
-        align-items: center;
-        gap: 10px;
-      }
-
-      .qty-box button {
-        width: 36px;
-        height: 36px;
-        border: none;
-        background: linear-gradient(135deg, var(--blue), var(--green));
-        border-radius: 10px;
-        color: white;
-        font-size: 18px;
-        cursor: pointer;
-        box-shadow: 0 4px 14px rgba(59, 130, 246, 0.4);
-      }
-
-      .qty-box span {
-        font-size: 18px;
-        font-weight: 600;
-      }
-
-      /* SUMMARY */
-      .summary-title {
-        font-size: 28px;
-        font-weight: 700;
-        margin-bottom: 20px;
-        background: linear-gradient(135deg, var(--blue), var(--green));
-        -webkit-background-clip: text;
-        -webkit-text-fill-color: transparent;
-      }
-
-      .summary-row {
-        display: flex;
-        justify-content: space-between;
-        font-size: 17px;
-        margin: 12px 0;
-      }
-
-      .summary-total {
-        font-size: 22px;
-        font-weight: 700;
-        border-top: 1px solid #e5e7eb;
-        padding-top: 20px;
-        margin-top: 20px;
-      }
-
-      /* BUTTON */
-      .checkout-btn {
-        width: 100%;
-        padding: 16px;
-        margin-top: 25px;
-        border: none;
-        font-size: 18px;
-        font-weight: 600;
-        color: white;
-        border-radius: 16px;
-        cursor: pointer;
-        background: linear-gradient(145deg, var(--blue), var(--green));
-        box-shadow: 0px 8px 24px rgba(16, 185, 129, 0.35);
-        transition: 0.25s ease-in-out;
-      }
-
-      .checkout-btn:hover {
-        transform: scale(1.04);
-      }
-    </style>
-  </head>
-  <body>
-    <div class="container">
-      <h1 class="page-title">Keranjang Belanja</h1>
-
-      <div class="cart-grid">
-        <!-- LEFT SIDE - CART -->
-        <div class="ultra-card">
-          <div class="cart-item">
-            <img src="assets/images/sample.jpg" />
-            <div class="item-info">
-              <h3>Beras Premium 5kg</h3>
-              <p>Harga: Rp 85.000</p>
-            </div>
-            <div class="qty-box">
-              <button>-</button>
-              <span>1</span>
-              <button>+</button>
-            </div>
-          </div>
-
-          <div class="cart-item">
-            <img src="assets/images/sample2.jpg" />
-            <div class="item-info">
-              <h3>Serum Brightening</h3>
-              <p>Harga: Rp 75.000</p>
-            </div>
-            <div class="qty-box">
-              <button>-</button>
-              <span>2</span>
-              <button>+</button>
-            </div>
-          </div>
+  <!-- MAIN LAYOUT -->
+  <main id="beranda" class="main-wrapper">
+    <div class="container main-layout">
+      <!-- SIDEBAR KATEGORI -->
+      <aside class="side-nav">
+        <div class="side-block">
+          <h3>Kategori Utama</h3>
+          <ul>
+            <li><a href="#" data-category="semua" class="category-link active">Semua Produk</a></li>
+            <li><a href="#" data-category="sembako" class="category-link">Sembako & Harian</a></li>
+            <li><a href="#" data-category="kecantikan" class="category-link">Kecantikan & Skincare</a></li>
+            <li><a href="#" data-category="elektronik" class="category-link">Elektronik & Gadget</a></li>
+            <li><a href="#" data-category="fashion" class="category-link">Fashion</a></li>
+            <li><a href="#" data-category="rumah" class="category-link">Rumah & Living</a></li>
+            <li><a href="#" data-category="minimarket" class="category-link">Minimarket</a></li>
+          </ul>
         </div>
 
-        <!-- RIGHT SIDE - SUMMARY -->
-        <div class="ultra-card">
-          <h2 class="summary-title">Ringkasan Belanja</h2>
+        <div class="side-block">
+          <h3>Promo Cepat</h3>
+          <ul>
+            <li><a href="#flash-sale">Flash Sale Hari Ini</a></li>
+            <li><a href="#voucher">Voucher Pengguna Baru</a></li>
+            <li><a href="#brand-favorit">Brand Pilihan</a></li>
+          </ul>
+        </div>
 
-          <div class="summary-row">
-            <span>Subtotal</span>
-            <span>Rp 235.000</span>
+        <div class="side-block">
+          <h3>Layanan</h3>
+          <ul>
+            <li><a href="#bantuan">Pusat Bantuan</a></li>
+            <li><a href="#bantuan">Lacak Pesanan</a></li>
+            <li><a href="#bantuan">Metode Pembayaran</a></li>
+          </ul>
+        </div>
+      </aside>
+
+      <!-- KONTEN UTAMA -->
+      <section class="content-area">
+        <!-- HERO SLIDER -->
+        <section class="hero">
+          <div class="hero-slider">
+            <div class="hero-slide active" data-index="0">
+              <div class="hero-text">
+                <h1>Belanja Nyaman di Abdi Mart</h1>
+                <p>Semua kebutuhan harian, kecantikan, dan elektronik dalam satu marketplace dengan pengiriman cepat.</p>
+                <button class="primary-btn">Belanja Sekarang</button>
+              </div>
+              <div class="hero-image">
+                <!-- Gambar dummy, bisa diganti -->
+                <div class="hero-illustration">Banner Utama</div>
+              </div>
+            </div>
+
+            <div class="hero-slide" data-index="1">
+              <div class="hero-text">
+                <h1>Flash Sale Setiap Hari</h1>
+                <p>Dapatkan diskon s/d 70% untuk produk pilihan dari berbagai brand favorit.</p>
+                <button class="primary-btn">Lihat Flash Sale</button>
+              </div>
+              <div class="hero-image">
+                <div class="hero-illustration">Flash Sale</div>
+              </div>
+            </div>
+
+            <div class="hero-slide" data-index="2">
+              <div class="hero-text">
+                <h1>Official Store Terpercaya</h1>
+                <p>Belanja langsung dari brand resmi seperti Miniso, Sociolla, dan lainnya.</p>
+                <button class="primary-btn">Jelajahi Brand</button>
+              </div>
+              <div class="hero-image">
+                <div class="hero-illustration">Official Store</div>
+              </div>
+            </div>
           </div>
-          <div class="summary-row">
-            <span>Ongkir</span>
-            <span>Rp 15.000</span>
+
+          <button class="hero-nav hero-prev">&#10094;</button>
+          <button class="hero-nav hero-next">&#10095;</button>
+
+          <div class="hero-dots">
+            <button class="dot active" data-slide="0"></button>
+            <button class="dot" data-slide="1"></button>
+            <button class="dot" data-slide="2"></button>
           </div>
+        </section>
 
-          <div class="summary-total">Total: Rp 250.000</div>
+        <!-- FLASH SALE -->
+        <section id="flash-sale" class="product-section">
+          <div class="section-header">
+            <h2>Flash Sale</h2>
+            <div class="section-extra">
+              <span class="badge">Berakhir dalam</span>
+              <span id="flash-timer">00:59:59</span>
+            </div>
+          </div>
+          <div class="product-grid">
+            <article class="product-card" data-category="sembako">
+              <div class="product-badge">-30%</div>
+              <div class="product-image">Gambar</div>
+              <h3>Beras Premium 5kg</h3>
+              <p class="product-price">Rp85.000 <span class="price-strike">Rp120.000</span></p>
+              <button class="secondary-btn">Tambah ke Keranjang</button>
+            </article>
 
-          <button class="checkout-btn">Lanjut ke Pembayaran</button>
+            <article class="product-card" data-category="kecantikan">
+              <div class="product-badge">-45%</div>
+              <div class="product-image">Gambar</div>
+              <h3>Serum Wajah Brightening</h3>
+              <p class="product-price">Rp75.000 <span class="price-strike">Rp135.000</span></p>
+              <button class="secondary-btn">Tambah ke Keranjang</button>
+            </article>
+
+            <article class="product-card" data-category="elektronik">
+              <div class="product-badge">-25%</div>
+              <div class="product-image">Gambar</div>
+              <h3>Earphone Wireless</h3>
+              <p class="product-price">Rp220.000 <span class="price-strike">Rp299.000</span></p>
+              <button class="secondary-btn">Tambah ke Keranjang</button>
+            </article>
+
+            <article class="product-card" data-category="minimarket">
+              <div class="product-badge">-15%</div>
+              <div class="product-image">Gambar</div>
+              <h3>Snack Bundle Alfamart</h3>
+              <p class="product-price">Rp35.000 <span class="price-strike">Rp45.000</span></p>
+              <button class="secondary-btn">Tambah ke Keranjang</button>
+            </article>
+          </div>
+        </section>
+
+        <!-- BRAND FAVORIT -->
+        <section id="brand-favorit" class="brand-section">
+          <div class="section-header">
+            <h2>Brand Favorit</h2>
+            <p>Terinspirasi dari brand-brand populer seperti Miniso, Sociolla, Alfamart, dan lainnya.</p>
+          </div>
+          <div class="brand-grid">
+            <div class="brand-card">Miniso Corner</div>
+            <div class="brand-card">Beauty by Sociolla</div>
+            <div class="brand-card">Alfa Store</div>
+            <div class="brand-card">Oh Some Picks</div>
+          </div>
+        </section>
+
+        <!-- VOUCHER & PROMO -->
+        <section id="voucher" class="voucher-section">
+          <div class="section-header">
+            <h2>Voucher & Promo</h2>
+          </div>
+          <div class="voucher-grid">
+            <div class="voucher-card">
+              <h3>Pengguna Baru</h3>
+              <p>Diskon Rp20.000 min. belanja Rp100.000</p>
+              <button class="secondary-btn">Klaim</button>
+            </div>
+            <div class="voucher-card">
+              <h3>Gratis Ongkir</h3>
+              <p>Gratis ongkir s/d Rp10.000 tanpa minimum belanja</p>
+              <button class="secondary-btn">Klaim</button>
+            </div>
+            <div class="voucher-card">
+              <h3>Brand Spesial</h3>
+              <p>Diskon tambahan 10% untuk Official Store</p>
+              <button class="secondary-btn">Klaim</button>
+            </div>
+          </div>
+        </section>
+
+        <!-- OFFICIAL STORE -->
+        <section id="official-store" class="product-section">
+          <div class="section-header">
+            <h2>Official Store</h2>
+          </div>
+          <div class="product-grid">
+            <article class="product-card" data-category="kecantikan">
+              <div class="product-image">Logo Brand</div>
+              <h3>Sociolla Official</h3>
+              <p class="product-price">Ratusan produk kecantikan original.</p>
+              <button class="secondary-btn">Kunjungi Toko</button>
+            </article>
+
+            <article class="product-card" data-category="rumah">
+              <div class="product-image">Logo Brand</div>
+              <h3>Miniso Official</h3>
+              <p class="product-price">Perlengkapan rumah & lifestyle.</p>
+              <button class="secondary-btn">Kunjungi Toko</button>
+            </article>
+
+            <article class="product-card" data-category="minimarket">
+              <div class="product-image">Logo Brand</div>
+              <h3>Alfa Mart Official</h3>
+              <p class="product-price">Belanja harian lebih praktis.</p>
+              <button class="secondary-btn">Kunjungi Toko</button>
+            </article>
+          </div>
+        </section>
+
+        <!-- BANTUAN -->
+        <section id="bantuan" class="help-section">
+          <div class="section-header">
+            <h2>Pusat Bantuan</h2>
+          </div>
+          <div class="help-grid">
+            <div class="help-card">
+              <h3>FAQ</h3>
+              <p>Pelajari cara belanja, pembayaran, dan pengiriman di Abdi Mart.</p>
+            </div>
+            <div class="help-card">
+              <h3>Hubungi Kami</h3>
+              <p>Butuh bantuan? Tim kami siap membantu melalui chat atau email.</p>
+            </div>
+            <div class="help-card">
+              <h3>Keamanan & Privasi</h3>
+              <p>Informasi mengenai perlindungan data dan keamanan transaksi.</p>
+            </div>
+          </div>
+        </section>
+      </section>
+    </div>
+  </main>
+
+  <!-- FOOTER -->
+  <footer class="site-footer">
+    <div class="container footer-grid">
+      <div class="footer-col">
+        <h4>Tentang Abdi Mart</h4>
+        <ul>
+          <li><a href="#">Tentang Kami</a></li>
+          <li><a href="#">Karier</a></li>
+          <li><a href="#">Blog</a></li>
+        </ul>
+      </div>
+      <div class="footer-col">
+        <h4>Bantuan</h4>
+        <ul>
+          <li><a href="#bantuan">Pusat Bantuan</a></li>
+          <li><a href="#">Syarat & Ketentuan</a></li>
+          <li><a href="#">Kebijakan Privasi</a></li>
+        </ul>
+      </div>
+      <div class="footer-col">
+        <h4>Ikuti Kami</h4>
+        <ul>
+          <li><a href="#">Instagram</a></li>
+          <li><a href="#">TikTok</a></li>
+          <li><a href="#">YouTube</a></li>
+        </ul>
+      </div>
+      <div class="footer-col">
+        <h4>Unduh Aplikasi</h4>
+        <div class="app-badges">
+          <span>Google Play</span>
+          <span>App Store</span>
         </div>
       </div>
     </div>
-  </body>
+    <div class="footer-bottom">
+      <p>&copy; <span id="year"></span> Abdi Mart. All rights reserved.</p>
+    </div>
+  </footer>
+
+  <button id="backToTop" class="back-to-top">↑</button>
+
+  <script src="/assets/main.js"></script>
+</body>
 </html>
->>>>>>> 337b9d1774821c415efbd2452d0e377cd7e1c78c
